src/objects/Reviewer_Pool__c.object
<CustomObject>
    <fields>
        <fullName>Expert_Reviewer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Reviewer Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Expert Reviewer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reviewer Pools</relationshipLabel>
        <relationshipName>Reviewer_Pools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NOFA_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOFO Group</label>
        <referenceTo>NOFA_Group__c</referenceTo>
        <relationshipLabel>Reviewer Pool</relationshipLabel>
        <relationshipName>Reviewer_Pools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <label>Roles</label>
        <picklist>
            <picklistValues>
                <fullName>Panel Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Panel Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experienced Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Targeted Experience Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Control Reiviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inter-Rater Reliability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Review Quality Control</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Available with Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Eligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligible – COI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Account_Id__c</fullName>
        <formula>Expert_Reviewer_Name__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Account Id</label>
        <type>Text</type>
    </fields>
    <label>Reviewer Pool</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Reviewer Pool Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviewer Pool</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>